# Library-Management-System

./: Admin.cpp  Admin.h  AdminDashboard.cpp  AdminDashboard.h  Book.cpp  Book.h  BookData.csv  BorrowableItem.cpp  BorrowableItem.h  BorrowingTransaction.cpp  BorrowingTransaction.h  CD.cpp  CD.h  CMakeLists.txt  CdData.csv  LibraryDatabase.cpp  LibraryDatabase.h  LoginScreen.cpp  LoginScreen.h  Magazine.cpp  Magazine.h  MagazineData.csv  Makefile  Member.cpp  Member.h  NotifySystem.cpp  NotifySystem.h  README.md  Reservation.cpp  Reservation.h  ReservationData.csv  SignupScreen.cpp  SignupScreen.h  User.cpp  User.h  UserDashboard.cpp  UserDashboard.h  UserData.csv  main.cpp  readme.txt
